zero.
[1507847] Merge databases now merges all the record's fields, thanks
to n0tig.
[] Minimum master passphrase length is now 8 characters, and user is
not offered the option of accepting weak passphrases.
[1513482] Preferences now saved in the .psafe3 file
[1504107] No longer saves cleared database
[1515994] User is now prompted to save database on system shutdown

New Features for 3.01
=====================
[726518] User can configure an expiration date for entries and be
notified accordingly.
[726508] Modification and access times now recorded.
[737878] Copy Notes to Clipboard
[1162051] Toolbar additions (Autotype, Browse URL, Copy Notes to clipboard)
[1465395] View Passwords in Nested Tree Mode
[] Ability to clear "Recent Database List"
[] Browse to URL now starts a new instance of the user's default browser
rather than taking over an existing instance

Bugs fixed in 3.01
==================
[1482002] Generated password no longer trashed if > 127 bytes
[1495670] Find now searches new URL and Autotype fields
[1495556] Restore after minimize now works when system-tray not used.
[1472332] Read-only command line argument bug
[] Help file now reflects 3.0 new features.
[1490985, 1423020, 1398936] Microsoft redistributable dlls now
included in installation and zip file. Should fix all "MS*.dll not
installed" problems
[1440951] Can now close application after minimize w/o system tray.



New Features for 3.0Beta2:
==========================
None.

Bugs fixed in 3.0Beta2:
=======================
[1450484] Trialing garbage in tooltip text fixed (DK).
[1462527] Uses a decent PRNG for non-XP platforms, closing key recovery
attack vulnerability.
[1446183] Export to v2 format now readable by pwsafe v2.x
[1463103] Fields in Edit Dialog are wider.
[1450486] URLs without a protocol now default to http.
[1459326, 1427642] Fixed problems with password prompt (DK)

Known problems in 3.0Beta2:
===========================
[1453108] Broken under Windows98SE?
