@@ -567,8 +567,7 @@ BEGIN
     LTEXT           "Password expires on:",IDC_STATIC_LTIME,11,251,67,8
     PUSHBUTTON      "Clear",IDC_LTIME_CLEAR,209,248,22,14
     PUSHBUTTON      "Set",IDC_LTIME_SET,242,248,22,14
-    CONTROL         "Static",IDC_LTIME,"Static",SS_SIMPLE | WS_GROUP,80,251,
-                    120,8
+    LTEXT           "Whenever",IDC_LTIME,81,251,120,8
     CONTROL         "",IDC_TOP_HIDEABLE,"Static",SS_ETCHEDHORZ | NOT 
                     WS_VISIBLE,7,200,270,1
     CONTROL         "Keep",IDC_SAVE_PWHIST,"Button",BS_AUTOCHECKBOX | 
@@ -640,8 +639,7 @@ BEGIN
                     264,106,10
     CONTROL         "Whenever",IDC_RMTIME,"Static",SS_SIMPLE | WS_GROUP,104,
                     278,106,10
-    CONTROL         "Whenever",IDC_LTIME,"Static",SS_SIMPLE | WS_GROUP,104,
-                    363,106,10
+    LTEXT           "Whenever",IDC_LTIME,104,363,106,10
     CONTROL         "",IDC_BOTTOM_HIDEABLE,"Static",SS_ETCHEDHORZ | NOT 
                     WS_VISIBLE,6,382,251,1
     GROUPBOX        "Password History",IDC_STATIC_PWHGROUP,7,290,267,58
@@ -1036,13 +1034,15 @@ BEGIN
     DEFPUSHBUTTON   "OK",IDOK,16,79,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,108,79,50,14
     CONTROL         "",IDC_EXPIRYDATE,"SysDateTimePick32",DTS_RIGHTALIGN | 
-                    DTS_APPCANPARSE | WS_TABSTOP,16,25,60,15
+                    DTS_UPDOWN | WS_TABSTOP,16,25,84,15
     CONTROL         "",IDC_EXPIRYTIME,"SysDateTimePick32",DTS_RIGHTALIGN | 
-                    DTS_UPDOWN | DTS_APPCANPARSE | WS_TABSTOP,98,25,60,15
-    LTEXT           "Select Date",IDC_STATIC,16,11,38,8
-    LTEXT           "Select Time",IDC_STATIC,98,11,37,8
+                    DTS_UPDOWN | WS_TABSTOP,110,25,48,15
+    LTEXT           "Select Date",IDC_STATIC,16,5,38,8
+    LTEXT           "Select Time",IDC_STATIC,110,5,37,8
     LTEXT           "Current Value:",IDC_STATIC,16,48,56,8
-    LTEXT           "Static",IDC_STATIC_CURRENT_LTIME,48,60,81,8
+    LTEXT           "Whenever",IDC_STATIC_CURRENT_LTIME,21,60,131,8
+    LTEXT           "Format: Day dd/mm/yyyy",IDC_STATIC,16,15,85,8
+    LTEXT           "Format: hh:mm",IDC_STATIC,110,15,50,8
 END
 
 IDD_DISPLAY_EXPIRED_ENTRIES DIALOGEX 0, 0, 274, 162
